tsr-docusign/main/default/objects/Docusign_Settings__c/Docusign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores docusign settings</description>
    <label>Docusign Settings</label>
</CustomObject>