tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Stores the account id of the specified docusign account.</description>
    <inlineHelpText>Stores the account id of the specified docusign account.</inlineHelpText>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>