tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Authentication_Service__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Service__c</fullName>
    <description>The URI of the authentication service instance to be used</description>
    <inlineHelpText>The URI of the authentication service instance to be used</inlineHelpText>
    <label>Authentication Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>