tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Certificate_Label__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Label__c</fullName>
    <description>Certificate Label</description>
    <inlineHelpText>The label value of the record in Certification and Key Management</inlineHelpText>
    <label>Certificate Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>