tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Key__c</fullName>
    <description>Integrator key for the docusign account.</description>
    <inlineHelpText>Integrator key for the docusign account.</inlineHelpText>
    <label>Integrator Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>