tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <description>DEPRECATED - DO NOT USE</description>
    <inlineHelpText>DEPRECATED - DO NOT USE</inlineHelpText>
    <label>DEPRECATED - DO NOT USE</label>
    <type>Url</type>
</CustomField>