tsr-docusign/main/default/objects/Docusign_Settings__c/fields/OAuth_Login__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Login__c</fullName>
    <description>OAuth login url for docusign.</description>
    <inlineHelpText>OAuth login url for docusign.</inlineHelpText>
    <label>OAuth Login</label>
    <type>Url</type>
</CustomField>