tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>DEPRECATED - DO NOT USE</description>
    <inlineHelpText>DEPRECATED - DO NOT USE</inlineHelpText>
    <label>DEPRECATED - DO NOT USE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>