tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Redirect_Uri__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Uri__c</fullName>
    <description>Redirect Uri</description>
    <inlineHelpText>Redirect Uri</inlineHelpText>
    <label>Redirect Uri</label>
    <type>Url</type>
</CustomField>