tsr-docusign/main/default/objects/Docusign_Settings__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>The time it takes for the docusign callout to timeout.</description>
    <inlineHelpText>The time it takes for the docusign callout to timeout.</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>