tsr-docusign/main/default/objects/Docusign_Settings__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>User Id</description>
    <inlineHelpText>User Id</inlineHelpText>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>