tsr-docusign/main/default/objects/Docusign_Settings__c/fields/User_Info_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>User_Info_Endpoint__c</fullName>
    <description>User info endpoint for obtaining base Uri.</description>
    <inlineHelpText>User info endpoint for obtaining base Uri.</inlineHelpText>
    <label>User Info Endpoint</label>
    <type>Url</type>
</CustomField>